itis3135/styles/default.css
body 
{
  font-family: Tahoma, sans-serif;
  color: #F1FFFA;
  background-color: #151706;
  /*Comment */
}
a { color: lightblue;}
a:hover { color: red;}

header
{
  font-family: Courier, serif;
  text-align: center;
  color: #FFAC81;
}

main
{
  text-align: center;
}

footer
{
  text-align: center;
}

